--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
   "devDependencies": {
     "bootstrap": "^3.3.5",
     "css-loader": "^0.22.0",
+    "file-loader": "^0.8.4",
     "node-sass": "^3.4.1",
     "sass-loader": "^3.1.1",
     "style-loader": "^0.13.0",
+    "url-loader": "^0.5.6",
     "webpack": "^1.12.3",
     "webpack-stream": "^2.1.1"
   }
