--- a/package.json
+++ b/package.json
@@ -16,23 +16,22 @@
     "url": "https://github.com/reachly/market-watch/issues"
   },
   "homepage": "https://github.com/reachly/market-watch#readme",
-  "dependencies": {
-    "bootstrap": "^3.3.5",
-    "event-stream": "^3.3.1",
-    "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^3.0.1",
-    "gulp-concat": "^2.6.0",
-    "gulp-sass": "^2.0.4",
-    "gulp-util": "^3.0.6",
-    "gulp-watch": "^4.3.5",
-    "lodash": "^3.10.1",
-    "webpack": "^1.12.2"
-  },
   "devDependencies": {
+    "babel-core": "^6.1.2",
+    "babel-loader": "^6.1.0",
+    "babel-preset-es2015": "^6.1.2",
+    "babel-preset-react": "^6.1.2",
+    "babel-runtime": "^6.0.14",
     "bootstrap": "^3.3.5",
     "css-loader": "^0.22.0",
     "file-loader": "^0.8.4",
+    "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^3.0.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-util": "^3.0.6",
+    "lodash": "^3.10.1",
     "node-sass": "^3.4.1",
+    "react-dom": "^0.14.2",
     "sass-loader": "^3.1.1",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.6",
