--- a/package.json
+++ b/package.json
@@ -30,8 +30,12 @@
     "gulp-concat": "^2.6.0",
     "gulp-util": "^3.0.6",
     "lodash": "^3.10.1",
+    "moment": "^2.10.6",
     "node-sass": "^3.4.1",
+    "react-bootstrap": "^0.27.3",
     "react-dom": "^0.14.2",
+    "react-redux": "^4.0.0",
+    "redux": "^3.0.4",
     "sass-loader": "^3.1.1",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.6",
