--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "lodash": "^3.10.1",
     "moment": "^2.10.6",
     "node-sass": "^3.4.1",
+    "react": "^0.14.2",
     "react-bootstrap": "^0.27.3",
     "react-dom": "^0.14.2",
     "react-redux": "^4.0.0",
