--- a/package.json
+++ b/package.json
@@ -43,5 +43,8 @@
     "url-loader": "^0.5.6",
     "webpack": "^1.12.3",
     "webpack-stream": "^2.1.1"
+  },
+  "dependencies": {
+    "extract-text-webpack-plugin": "^0.9.1"
   }
 }
