--- a/package.json
+++ b/package.json
@@ -42,9 +42,7 @@
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.3",
-    "webpack-stream": "^2.1.1"
-  },
-  "dependencies": {
+    "webpack-stream": "^2.1.1",
     "extract-text-webpack-plugin": "^0.9.1"
   }
 }
