--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^3.3.5",
     "css-loader": "^0.22.0",
     "es6-promise": "^3.0.2",
+    "extract-text-webpack-plugin": "^0.9.1",
     "file-loader": "^0.8.4",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.0.1",
@@ -35,6 +36,7 @@
     "node-sass": "^3.4.1",
     "react": "^0.14.2",
     "react-bootstrap": "^0.27.3",
+    "react-bootstrap-daterangepicker": "^1.0.6",
     "react-dom": "^0.14.2",
     "react-redux": "^4.0.0",
     "redux": "^3.0.4",
@@ -42,7 +44,6 @@
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.3",
-    "webpack-stream": "^2.1.1",
-    "extract-text-webpack-plugin": "^0.9.1"
+    "webpack-stream": "^2.1.1"
   }
 }
