--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "bootstrap": "^3.3.5",
     "css-loader": "^0.22.0",
     "es6-promise": "^3.0.2",
+    "exports-loader": "^0.6.2",
     "extract-text-webpack-plugin": "^0.9.1",
     "file-loader": "^0.8.4",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.0.1",
     "gulp-concat": "^2.6.0",
     "gulp-util": "^3.0.6",
+    "imports-loader": "^0.6.5",
     "lodash": "^3.10.1",
     "moment": "^2.10.6",
     "node-sass": "^3.4.1",
@@ -44,6 +46,7 @@
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.3",
-    "webpack-stream": "^2.1.1"
+    "webpack-stream": "^2.1.1",
+    "whatwg-fetch": "^0.10.1"
   }
 }
